# latest-pypi-version

./: .gitignore  README.md  Taskfile.yml  mypy.ini  pyproject.toml
latest_pypi_version/: cli.py
